[gd_scene load_steps=3 format=3 uid="uid://br1qgvk1r7twe"]

[ext_resource type="Script" uid="uid://cki73tre3w3ij" path="res://util/multiplayer_menu.gd" id="1_qumoq"]
[ext_resource type="Texture2D" uid="uid://wnkd7v8rtd1n" path="res://graphics/leave_game_icon.png" id="2_7f71v"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qumoq")
metadata/_edit_horizontal_guides_ = [-213.0]

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Control6" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="LocalGameButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MediumButton"
text = "Start Local Game"

[node name="LeaveGameButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45
focus_mode = 0
icon = ExtResource("2_7f71v")
expand_icon = true

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Control6" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="AlertLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MediumLabel"
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control5" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control4" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Address: "

[node name="AddressTextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"MediumTextEdit"
text = "127.0.0.1"
placeholder_text = "Enter host address here"

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Port: "

[node name="PortTextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"MediumTextEdit"
text = "31415"
placeholder_text = "Enter host port here"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control7" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Name: "

[node name="NameTextEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"MediumTextEdit"
text = "unnamed player"
placeholder_text = "Enter name here"

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Player Type: "

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
selected = 0
item_count = 4
popup/item_0/text = "Astronaut"
popup/item_0/id = 0
popup/item_1/text = "Astra"
popup/item_1/id = 1
popup/item_2/text = "Excahauler"
popup/item_2/id = 2
popup/item_3/text = "Spectator"
popup/item_3/id = 3

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="HostButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"MediumButton"
text = "Host Game"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="JoinButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"MediumButton"
text = "Join Game"

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"MediumButton"
disabled = true
text = "Start Game"

[node name="Control4" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Control5" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Control6" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ConnectLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MediumLabel"
theme_override_colors/font_color = Color(0, 1, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control5" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="NumPlayersContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Control6" type="Control" parent="PanelContainer/VBoxContainer/NumPlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/NumPlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MediumLabel"
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Connected players: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="NumPlayers" type="Label" parent="PanelContainer/VBoxContainer/NumPlayersContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme_type_variation = &"MediumLabel"
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "0/4"
vertical_alignment = 1

[node name="Control5" type="Control" parent="PanelContainer/VBoxContainer/NumPlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -433.0
offset_top = -50.0
offset_right = -6.0
offset_bottom = -5.0
theme_type_variation = &"MediumLabel"
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
text = "version not specified"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer5/LocalGameButton" to="." method="_on_local_game_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer5/LeaveGameButton" to="." method="_on_leave_game_button_pressed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
